added link to github repository

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 
 		</article>
 		<footer>
-			<p>If you want to contact me, <a href="mailto:bing@bingdom.de">bing@bingdom.de</a> is the email.</p>
+			<p>
+			  <a href="https://github.com/bingeling/goalchord">The code is on github, have at it!</a>
+			  If you want to contact me, <a href="mailto:bing@bingdom.de">bing@bingdom.de</a> is the email.
+			</p>
 		</footer>
 
 
