--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="build/goalchord.css">
-		<script src="js/libs/prefixfree.min.js"></script>
+		<script src="assets/js/libs/prefixfree.min.js"></script>
   </head>
   <body>
 		<article>
