providing image fallback for browsers that don't support svg

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</div>
 
 			<section id="visualization">
-				<div class="diagram"></div>
+				<div id="diagram"></div>
 
 				<figure>
 				  data from the 2013/2014 regular season,
